--- a/optimal_lag.ipynb
+++ b/optimal_lag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "import statsmodels.api as sm\n",
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_absolute_error"
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.model_selection import TimeSeriesSplit"
    ]
   },
   {
@@ -134,11 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for lag in [10]:\n",
+    "for lag in potential_lags:\n",
     "    curr_dataset=largest_dataset.iloc[:,:lag+1].dropna() #slide rows, cols in matrix (ilocs transforms df to matrix)\n",
     "    train= curr_dataset[:int(0.8*(len(data)))]\n",
     "    test= curr_dataset[int(0.8*(len(data))):]\n",
@@ -207,6 +208,80 @@
     "plt.grid()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Cross Validation for determining lag**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 29.809187298876346\n",
+      "2 28.07272424810522\n",
+      "14 10.030136638015309\n",
+      "10 23.12978060879562\n",
+      "3 28.029620440447122\n",
+      "*********\n",
+      "best MAE: 10.030136638015309\n",
+      "*****\n",
+      "Best lag: 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import TimeSeriesSplit\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "min_mae= 1000000000\n",
+    "best_lag=-1\n",
+    "\n",
+    "for lag in potential_lags:\n",
+    "    curr_dataset=largest_dataset.iloc[:,:lag+1].dropna() #slide rows, cols in matrix (ilocs transforms df to matrix)\n",
+    "\n",
+    "    y = curr_dataset['Passengers']\n",
+    "    X = curr_dataset.drop(columns='Passengers')\n",
+    "\n",
+    "    tscv = TimeSeriesSplit(n_splits=5)\n",
+    "\n",
+    "    model = LinearRegression()\n",
+    "\n",
+    "    average=[]\n",
+    "    # Cross-validation\n",
+    "    for train_idx, test_idx in tscv.split(X):\n",
+    "        X_train, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
+    "        y_train, y_test = y.iloc[train_idx], y.iloc[test_idx]\n",
+    "        \n",
+    "        model.fit(X_train, y_train)\n",
+    "        predictions = model.predict(X_test)\n",
+    "        mae = mean_absolute_error(y_test, predictions)\n",
+    "        average.append(mae)\n",
+    "    print(lag, np.mean(average))\n",
+    "    if np.mean(average)< min_mae :\n",
+    "        min_mae=np.mean(average)\n",
+    "        best_lag=lag\n",
+    "\n",
+    "        \n",
+    "print(f\"best MAE: {min_mae}\")\n",
+    "print(f\"Best lag: {best_lag}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
