--- a/optimal_lag.ipynb
+++ b/optimal_lag.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -226,28 +226,27 @@
      "output_type": "stream",
      "text": [
       "1 29.809187298876346\n",
-      "2 28.07272424810522\n",
+      "2 28.072724248105214\n",
       "14 10.030136638015309\n",
       "10 23.12978060879562\n",
-      "3 28.029620440447122\n",
-      "*********\n",
-      "best MAE: 10.030136638015309\n",
-      "*****\n",
+      "3 28.029620440447125\n",
+      "Best MAE: 10.030136638015309\n",
       "Best lag: 14\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "min_mae= 1000000000\n",
     "best_lag=-1\n",
     "\n",
+    "scaler = StandardScaler()\n",
+    "\n",
     "for lag in potential_lags:\n",
-    "    curr_dataset=largest_dataset.iloc[:,:lag+1].dropna() #slide rows, cols in matrix (ilocs transforms df to matrix)\n",
+    "    curr_dataset = largest_dataset.iloc[:, :lag + 1].dropna()  # Slide rows, cols in matrix (iloc transforms df to matrix)\n",
     "\n",
     "    y = curr_dataset['Passengers']\n",
     "    X = curr_dataset.drop(columns='Passengers')\n",
@@ -256,23 +255,27 @@
     "\n",
     "    model = LinearRegression()\n",
     "\n",
-    "    average=[]\n",
+    "    average = []\n",
     "    # Cross-validation\n",
     "    for train_idx, test_idx in tscv.split(X):\n",
     "        X_train, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
     "        y_train, y_test = y.iloc[train_idx], y.iloc[test_idx]\n",
     "        \n",
-    "        model.fit(X_train, y_train)\n",
-    "        predictions = model.predict(X_test)\n",
+    "        # Apply StandardScaler\n",
+    "        X_train_scaled = scaler.fit_transform(X_train)\n",
+    "        X_test_scaled = scaler.transform(X_test)\n",
+    "        \n",
+    "        model.fit(X_train_scaled, y_train)\n",
+    "        predictions = model.predict(X_test_scaled)\n",
     "        mae = mean_absolute_error(y_test, predictions)\n",
     "        average.append(mae)\n",
-    "    print(lag, np.mean(average))\n",
-    "    if np.mean(average)< min_mae :\n",
-    "        min_mae=np.mean(average)\n",
-    "        best_lag=lag\n",
-    "\n",
     "        \n",
-    "print(f\"best MAE: {min_mae}\")\n",
+    "    print(lag, np.mean(average))\n",
+    "    if np.mean(average) < min_mae:\n",
+    "        min_mae = np.mean(average)\n",
+    "        best_lag = lag\n",
+    "\n",
+    "print(f\"Best MAE: {min_mae}\")\n",
     "print(f\"Best lag: {best_lag}\")\n"
    ]
   },
